# wiki-search

./: .gitignore  LICENSE  README.md  docker-compose.yml  prompt.txt  pyproject.toml
api_search/: __init__.py
data/: README.md
diskstorage/: __init__.py
embedding-test/: vectors.py
experiments/embedding-test/: evaluate.py  setup_lance.py
experiments/index_full/: app.py  fast.py  index.py  search_opensearch.py  setup_opensearch.py  text_files.py  tune_opensearch.py
experiments/mini_search_optimizatons/: index small.py  setup_opensearch.py  test_small_subset.py  text_files.py
extra/: llm_example.py
noun_phases/: __init__.py
search_backends/: search_opensearch.py  search_opensearch_v2.py  setup.py  setup_opensearch.py
search_dataset/: __init__.py  base.py  llm_expansion.py  prompt.md  search-dataset.csv
search_index/: evaluate.py  helpers.py  sanity.py  setup.py
utils/: __init__.py  embedding.py  fuzzy.py
wikidata-5m/: download.py  evaluate.py  index copy.py  index.py
wikidata-full/: __init__.py  evaluate copy.py  evaluate.py
